--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/Index.cshtml
@@ -185,3 +185,43 @@
     <!-- /container -->
 </section>
 
+<section class="no-parallax section-holder section-home16">
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-lg-8 offset-lg-2">
+
+                <div class="testimonials-container">
+
+                    
+                    <div class="owl-carousel owl-theme testimonials-slider">
+                        @foreach (var item in Model.categories)
+                        {
+                            <div class="testimonial-item">
+
+                                <div class="testimonial-desc">
+                                    <i class="fas fa-quote-left"></i>
+                                    <h5>@item.Description</h5>
+                                </div>
+                                <div class="testimonial-client"> <img src="~/images/testimonials/@item.Image" style="width:100px;height:100px;border-radius:50%;" alt=""></div>
+                                <div class="client-name">@item.Name</div>
+                                <div class="client-company">@item.Company</div>
+
+
+                            </div>
+                        }
+                        </div>
+                    
+                </div>
+
+                <!-- /testimonials-container -->
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- /container -->
+</section>
