--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <header id="header-bar" class="header-1">
         <div class="container">
             <div class="header-wrap header-wrap1">
-                <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="images/logo.png" alt="Lawyers"></a></div>
+                <div class="logo logo-1"><a href="index.html"><img class="img-fluid" src="~/images/logo.png" alt="Lawyers"></a></div>
                 <div class="header-contact">
                     <div class="header-info"><span class="info-circle"><i class="fa fa-phone"></i></span> 1-800-000-111</div>
                     <div class="header-info"><span class="info-circle"><i class="fa fa-envelope"></i></span> contact@example.com</div>
@@ -52,7 +52,7 @@
                             <li class="menu-item"><a href="pricing.html">Pricing</a></li>
                             <li class="menu-item"><a href="gallery-1.html">Gallery</a></li>
                             <li class="menu-item"><a href="faq.html">FAQ</a></li>
-                            <li class="menu-item"><a href="testimonials.html">Testimonials</a></li>
+                            <li class="menu-item"><a asp-controller="Home" asp-action="Pages">Testimonials</a></li>
                         </ul>
                     </li>
                     <li class="menu-item menu-item-has-children">
