--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -67,11 +67,8 @@
                                 </ul>
                             </li>
                             <li class="menu-item menu-item-has-children">
-                                <a href="practice-areas-v2-3-cols.html">Practice v2</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item"><a href="practice-areas-v2-3-cols.html">Practice v2 3 Cols</a></li>
-                                    <li class="menu-item"><a href="practice-areas-v2-4-cols.html">Practice v2 4 Cols</a></li>
-                                </ul>
+                                <a asp-controller="Home" asp-action="Practice">Practice v2</a>
+                               
                             </li>
                             <li class="menu-item menu-item-has-children">
                                 <a href="practice-image-3-cols.html">Practice Image</a>
