--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                             <li class="menu-item"><a href="attorneys-2-cols.html">Attorneys 2 Cols</a></li>
                             <li class="menu-item"><a href="attorneys.html">Attorneys 3 Cols</a></li>
                             <li class="menu-item"><a href="attorneys-4-cols.html">Attorneys 4 Cols</a></li>
-                            <li class="menu-item"><a href="attorneys-single-page.html">Single Attorney</a></li>
+                            <li class="menu-item"><a asp-controller="Home" asp-action="Attorneys">Single Attorney</a></li>
                         </ul>
                     </li>
                     <li class="menu-item menu-item-has-children">
