--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                         </ul>
                     </li>
                     <li class="menu-item menu-item-has-children">
-                        <a href="blog.html">Blog</a>
+                        <a asp-action="Blog" asp-controller="Home">Blog</a>
                         <ul class="sub-menu">
                             <li class="menu-item"><a href="blog-list.html">Blog List</a></li>
                             <li class="menu-item"><a href="blog-classic.html">Blog Classic</a></li>
