--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Blog/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Blog/Index.cshtml
@@ -28,6 +28,8 @@
                 <th scope="col">Header Description</th>
                 <th scope="col">Title</th>
                 <th scope="col">Title Description</th>
+                <th scope="col">aforizm</th>
+                <th scope="col">aforizm yazicisi</th>
                 <th scope="col">Comment</th>
                 <th scope="col">About Description</th>
                 <th scope="col">Recent titles</th>
@@ -57,6 +59,8 @@
                     <td>@item.headerDesc</td>
                     <td>@item.Title</td>
                     <td>@item.titleDesc</td>
+                    <td>@item.Aphorizm</td>
+                    <td>@item.AphirzmWriter</td>
                     <td>@item.Comment</td>
                     <td>@Html.Raw(item.AboutDesc)</td>
                     <td>@item.RecentTitle</td>
