--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
                         </ul>
                     </li>
                     <li class="menu-item menu-item-has-children">
-                        <a href="contact.html">Contact</a>
+                        <a asp-action="Contact" asp-controller="Home">Contact</a>
                         <ul class="sub-menu">
                             <li class="menu-item"><a href="contact.html">Contact 1</a></li>
                             <li class="menu-item"><a href="contact-2.html">Contact 2</a></li>
