--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/Contact.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/Contact.cshtml
@@ -1,5 +1,21 @@
 ﻿@model Contact
 
+<style>
+    .tests {
+        background-image: url(../images/contact/contactBg.jpg);
+        background-size: cover;
+    }
+</style>
+    <div class="page-head tests" >
+        <div class="inner-desc">
+            <div class="container">
+                <h1 class="page-title">Contact</h1>
+                <span class="post-subtitle page-subtitle">Call Us Today 1-800-000-111</span>
+            </div>
+        </div>
+    </div>
+
+
 <section class="section-holder">
     <div class="container">
         <div class="row align-items-center">
